# Aerial-Object-Detection

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  launcher.pyw  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: default.yaml
docs/: lessons-learned.md
docs/plans/: clip-framerate-dedup.md  cpu-idle-reduction.md  multi-camera-support.md  overnight-oom-and-launcher-detach.md  schedule-override-memory-mitigation.md
docs/test-plans/: clip-framerate-dedup.md  schedule-override-memory-mitigation.md
src/: config.py  main.py  pipeline.py  zones.py
src/capture/: stream.py
src/processing/: classifier.py  detector.py  preprocessor.py  tracker.py
src/recording/: clip_writer.py  event_logger.py  models.py
src/web/: app.py  routes.py  test_pipeline.py  video_metadata.py  websocket.py
src/web/static/css/: dashboard.css
src/web/static/js/: dashboard.js
src/web/templates/: base.html  dashboard.html  history.html  settings.html  zones.html
tests/: conftest.py  test_classifier.py  test_clip_writer.py  test_detector.py  test_event_logger.py  test_pipeline_schedule.py  test_routes.py  test_tracker.py
tools/: Install-DesktopShortcut.ps1  Launch-AerialDetect.ps1  launch.bat
